--- a/css/styles.css
+++ b/css/styles.css
@@ -14181,7 +14181,7 @@ fieldset:disabled .btn {
 .font-header {
   color: rgba(0, 0, 0, 0.68);
   font-weight: 500;
-  font-size: 18px;
+    font-size: 16px !important;
   text-align: center;
 }
 
